/* RPC service provided by file replication service (replicator).
   It provides two services - one for local workers, and another one for remote replicator. */

syntax = "proto3";

package redsort.jobs.messages;

import "google/protobuf/empty.proto";

/* RPC service called by local workers. 
   Provide Push() method to replicate file to another machine, and Pull() method to do the inverse. 
   Replicator invokes RPC method of `REplicationRemoteServicer` of remote replicator to transmit data. */
service ReplicatorLocalService {
  rpc Push(PushRequest) returns (ReplicationResult);
  rpc Pull(PullRequest) returns (ReplicationResult);
}

/* RPC service called remote workers. */
service ReplicatorRemoteService {
  rpc Read(ReadRequest) returns (stream Packet);
  rpc Write(stream WriteRequest) returns (google.protobuf.Empty);  
}

message PushRequest {
  string path = 1;
  int32 dst = 2;
}

message PullRequest {
  string path = 1;
  int32 src = 2;
}

message ReplicationResult {
  bool success = 1;
  optional ReplicationErrorKind error = 2;
  optional ReplicationStats stats = 3;
}

enum ReplicationErrorKind {
  UNKNOWN_ERROR = 0;
}

message ReplicationStats {}

message ReadRequest {
  string path = 1;
}


message WriteRequest {
  optional string path = 1;
  bytes data = 2;
}

message Packet {
  bytes data = 1;
}